--- a/part8/libraryBackend/package.json
+++ b/part8/libraryBackend/package.json
@@ -12,8 +12,10 @@
     "apollo-server": "^2.19.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
     "mongoose-unique-validator": "^2.0.3",
+    "react-jwt": "^1.0.7",
     "uuid": "^8.3.1"
   }
 }
